add_library(${PROJECT_NAME}
    laser_mapping.cpp
    options.cpp
    pointcloud_preprocess.cpp
    utils.cpp
)

target_link_libraries(${PROJECT_NAME}
    glog 
    yaml-cpp
    tbb
    ${PCL_LIBRARIES}
)
ament_target_dependencies(
    ${PROJECT_NAME}
    rclcpp 
    std_msgs 
    sensor_msgs
    nav_msgs
)