add_library(${PROJECT_NAME}
    laser_mapping.cpp
    humanoid_slam/HumanoidSlamBuilder.cpp
    humanoid_slam/lidar_odom/ikd_odom/IkdOdomBuilder.cpp
    humanoid_slam/lidar_odom/ikd_odom/ImuProcess.cpp
    humanoid_slam/lidar_odom/ikd_odom/Options.cpp
    humanoid_slam/lidar_odom/ikd_odom/Timer.cpp
    humanoid_slam/lidar_odom/ikd_odom/UseIkfom.cpp
)

target_link_libraries(${PROJECT_NAME}
    glog 
    yaml-cpp
    tbb
    ${PCL_LIBRARIES}
)
ament_target_dependencies(
    ${PROJECT_NAME}
    rclcpp 
    std_msgs 
    sensor_msgs
    nav_msgs
)